# Build/VeriCre/API/Profile/api.yaml
@@ -13,22 +13,59 @@ tags:
   - name: Profile
     description: APIs to search Physician Profiles
 paths:
+  /physicians/search:
+    post:
+      tags:
+        - Profile
+      description: >-
+        Create and return ephemeral search results for physicians using 
+        NPI Number or 
+        a set of First Name, Last Name, Date of Birth
+      operationId: searchPhysicians
+      x-amazon-apigateway-integration:
+        uri: "arn:aws:apigateway:${region}:lambda:path/2015-03-31/functions/arn:aws:lambda:${region}:${account_id}:function:${project}-${environment}-Profile-API/invocations"
+        responses:
+          default:
+            statusCode: "200"
+        passthroughBehavior: "when_no_match"
+        httpMethod: "POST"
+        contentHandling: "CONVERT_TO_TEXT"
+        type: "aws_proxy"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ProfileLookUp'
+      responses:
+        '201':
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ProfileLookupResponse'
+        '204':
+          description: No Content. Search request did not find any matches
+        '400':
+          description: Bad Request
+        '500':
+          description: Internal Server Error
   /profiles:
     get:
       tags:
         - Profile
-      description: Fetch profiles by ME number
+      description: Fetch profiles by Entity Id
       operationId: getProfiles
       parameters:
-        - name: me
+        - name: entityId
           in: query
-          description: List of ME Numbers
-          content:
-            '*/*':
-              schema:
-                type: array
-                items:
-                  type: string
+          description: List of Entity Ids
+          required: true
+          schema:
+            type: array
+            items:
+              type: string
       x-amazon-apigateway-integration:
         uri: "arn:aws:apigateway:${region}:lambda:path/2015-03-31/functions/arn:aws:lambda:${region}:${account_id}:function:${project}-${environment}-Profile-API/invocations"
         responses:
@@ -48,7 +85,183 @@ paths:
                 items:
                   $ref: '#/components/schemas/ProfileData'
         '400':
-          description: Bad Request. The request should have a limit of 100 ME numbers
+          description: Bad Request. The request should have a limit of 100 Entity Ids
+        '500':
+          description: Internal Server Error
+    patch:
+      tags:
+        - Profile
+      description: >-
+        Update profiles referenced by Entity Ids from the associated external
+        CAQH records
+      operationId: refreshProfiles
+      parameters:
+        - name: entityId
+          in: query
+          description: List of Entity Ids
+          required: true
+          schema:
+            type: array
+            items:
+              type: string
+      x-amazon-apigateway-integration:
+        uri: "arn:aws:apigateway:${region}:lambda:path/2015-03-31/functions/arn:aws:lambda:${region}:${account_id}:function:${project}-${environment}-Profile-API/invocations"
+        responses:
+          default:
+            statusCode: "200"
+        passthroughBehavior: "when_no_match"
+        httpMethod: "POST"
+        contentHandling: "CONVERT_TO_TEXT"
+        type: "aws_proxy"
+      responses:
+        '200':
+          description: Successful Response
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ProfileData'
+        '400':
+          description: Bad Request. The request should have a limit of 100 Entity Ids
+        '404':
+          description: The profile was not found for the provided Entity Ids
+        '500':
+          description: Internal Server Error
+  /profile/{entityId}:
+    get:
+      tags:
+        - Profile
+      description: Fetch a single profile by Entity Id
+      operationId: getProfile
+      parameters:
+        - name: entityId
+          in: path
+          description: Physician's Entity Id
+          required: true
+          content:
+            application/json:
+              schema:
+                type: string
+      x-amazon-apigateway-integration:
+        uri: "arn:aws:apigateway:${region}:lambda:path/2015-03-31/functions/arn:aws:lambda:${region}:${account_id}:function:${project}-${environment}-Profile-API/invocations"
+        responses:
+          default:
+            statusCode: "200"
+        passthroughBehavior: "when_no_match"
+        httpMethod: "POST"
+        contentHandling: "CONVERT_TO_TEXT"
+        type: "aws_proxy"
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ProfileData'
+        '404':
+          description: The profile was not found for the provided Entity Id
+        '500':
+          description: Internal Server Error
+  /profile/{entityId}/documents:
+    get:
+      tags:
+        - Profile
+      description: This API retrieves a Physician's uploaded documents
+      operationId: getPhysicianDocuments
+      parameters:
+        - name: entityId
+          in: path
+          description: Physician's Entity Id
+          required: true
+          content:
+            application/json:
+              schema:
+                type: string
+      x-amazon-apigateway-integration:
+        uri: "arn:aws:apigateway:${region}:lambda:path/2015-03-31/functions/arn:aws:lambda:${region}:${account_id}:function:${project}-${environment}-Profile-API/invocations"
+        responses:
+          default:
+            statusCode: "200"
+        passthroughBehavior: "when_no_match"
+        httpMethod: "POST"
+        contentHandling: "CONVERT_TO_TEXT"
+        type: "aws_proxy"
+      responses:
+        '200':
+          description: Successful Response
+          content:
+            application/zip: {}
+        '404':
+          description: Profile/Documents not found
+        '500':
+          description: Internal Server Error
+  /profile/{entityId}/CAQH/pdf:
+    get:
+      tags:
+        - Profile
+      description: This API retrieves a Physician's Profile from CAQH ProView
+      operationId: getCAQHPdf
+      parameters:
+        - name: entityId
+          in: path
+          description: Physician's Entity Id
+          required: true
+          content:
+            application/json:
+              schema:
+                type: string
+      x-amazon-apigateway-integration:
+        uri: "arn:aws:apigateway:${region}:lambda:path/2015-03-31/functions/arn:aws:lambda:${region}:${account_id}:function:${project}-${environment}-Profile-API/invocations"
+        responses:
+          default:
+            statusCode: "200"
+        passthroughBehavior: "when_no_match"
+        httpMethod: "POST"
+        contentHandling: "CONVERT_TO_TEXT"
+        type: "aws_proxy"
+      responses:
+        '200':
+          description: Successful Response
+          content:
+            application/octet-stream: {}
+        '404':
+          description: Profile/Pdf not found
+        '500':
+          description: Internal Server Error
+  /profile/{entityId}/AMA/pdf:
+    get:
+      tags:
+        - Profile
+      description: This API retrieves a Physician's profile from AMA Profile's Hub
+      operationId: getAMAPdf
+      parameters:
+        - name: entityId
+          in: path
+          description: Physician's Entity Id
+          required: true
+          content:
+            application/json:
+              schema:
+                type: string
+      x-amazon-apigateway-integration:
+        uri: "arn:aws:apigateway:${region}:lambda:path/2015-03-31/functions/arn:aws:lambda:${region}:${account_id}:function:${project}-${environment}-Profile-API/invocations"
+        responses:
+          default:
+            statusCode: "200"
+        passthroughBehavior: "when_no_match"
+        httpMethod: "POST"
+        contentHandling: "CONVERT_TO_TEXT"
+        type: "aws_proxy"
+      responses:
+        '200':
+          description: Successful Response
+          content:
+            application/octet-stream: {}
+        '404':
+          description: Profile/Pdf not found
         '500':
           description: Internal Server Error
 components:
@@ -80,14 +293,12 @@ components:
           type: string
         date_of_birth:
           type: string
-        me_number:
-          type: string
         entity_id:
           type: string
     ProfileData:
       type: object
       properties:
-        me_number:
+        entity_id:
           type: string
         demographics:
           type: array
